[gd_scene format=3 uid="uid://2eiqrorfxdm7"]

[ext_resource type="Script" uid="uid://dpy0gyqhu6jrv" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://dwtl8ldxgq4mu" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://c0nb3s2whldha" path="res://components/weapon.gd" id="3_efxa6"]
[ext_resource type="Script" uid="uid://cs8nwbb5jd150" path="res://score_list.gd" id="4_1bvp3"]
[ext_resource type="Resource" uid="uid://4ylnufwfebew" path="res://weapons/resources/time_grenade.tres" id="4_dg77c"]
[ext_resource type="Script" uid="uid://bycw3g40e407w" path="res://score_tracker.gd" id="5_lquwl"]
[ext_resource type="Resource" uid="uid://bcux4i8q8cddf" path="res://weapons/resources/contact_grenade.tres" id="5_ycdy4"]
[ext_resource type="Resource" uid="uid://bho4w2now4q4m" path="res://weapons/resources/sachel_grenade.tres" id="6_w48qg"]

[sub_resource type="Environment" id="Environment_h2yge"]

[node name="Main" type="Node3D" unique_id=1533164665]
script = ExtResource("1_0xm2m")
PlayerScene = ExtResource("1_ig7tw")
weapon_array = Array[ExtResource("3_efxa6")]([ExtResource("4_dg77c"), ExtResource("5_ycdy4"), ExtResource("6_w48qg")])

[node name="CSGBox3D" type="CSGBox3D" parent="." unique_id=1361545046]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.0349884, 0)
use_collision = true
size = Vector3(100, 1, 100)

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=749729803]
environment = SubResource("Environment_h2yge")

[node name="MainMenu" type="CanvasLayer" parent="." unique_id=730139517]

[node name="HostButton" type="Button" parent="MainMenu" unique_id=396437102]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -128.5
offset_right = 325.0
offset_bottom = 128.5
grow_vertical = 2
text = "Host"

[node name="ClientButton" type="Button" parent="MainMenu" unique_id=1865008224]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -128.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
text = "Client
"

[node name="LineEdit" type="LineEdit" parent="MainMenu" unique_id=76093427]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.25
offset_top = -15.5
offset_right = 34.25
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "127.0.0.1"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=1537945309]
_spawnable_scenes = PackedStringArray("uid://dwtl8ldxgq4mu")
spawn_path = NodePath("..")

[node name="WorldLight" type="DirectionalLight3D" parent="." unique_id=1447839799]
transform = Transform3D(1, 0, 0, 0, 0.7634467, 0.64587086, 0, -0.64587086, 0.7634467, 0, 19.133778, 27.970188)

[node name="Camera3D" type="Camera3D" parent="." unique_id=1228781668]
transform = Transform3D(1, 0, 0, 0, 0.6795822, 0.73359936, 0, -0.73359936, 0.6795822, 0, 9.134973, 11.695151)
current = true

[node name="RespawnMenu" type="CanvasLayer" parent="." unique_id=1479100587]
visible = false

[node name="Respawn" type="Button" parent="RespawnMenu" unique_id=1798908710]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -70.25
offset_right = 103.5
offset_bottom = 70.25
grow_horizontal = 2
grow_vertical = 2
text = "Respawn"

[node name="ScoreTracker" type="Node" parent="." unique_id=620774037]
script = ExtResource("5_lquwl")

[node name="ScoreBoard" type="CanvasLayer" parent="." unique_id=643451283]
visible = false

[node name="ScoreList" type="ItemList" parent="ScoreBoard" unique_id=1407789526]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
script = ExtResource("4_1bvp3")

[connection signal="player_kill" from="." to="ScoreTracker" method="_on_player_kill"]
[connection signal="pressed" from="MainMenu/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="text_submitted" from="MainMenu/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="RespawnMenu/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="visibility_changed" from="ScoreBoard/ScoreList" to="ScoreBoard/ScoreList" method="_on_visibility_changed"]
